fix svg style on Firefox

--- a/src/common/ui/style/style.css
+++ b/src/common/ui/style/style.css
@@ -51,7 +51,8 @@ code {
   height: 1rem;
 }
 
-svg path {
+// Firefox does not support `svg path` selector
+svg {
   fill: currentColor;
 }
 
